html test3 commit

--- a/gittestdir/index.html
+++ b/gittestdir/index.html
@@ -12,14 +12,14 @@
     <h1>A mathiasz iskola 10 osztaly</h1>
     <hr>
     <ul>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
+        <ls>BALOGH LANA</ls>
+        <ls>ZSOMBOR</ls>
+        <ls>ALIMOV SZABOLCS</ls>
+        <ls>csuhan lukacs balazs</ls>
+        <ls>LACI</ls>
+        <ls>LORAND</ls>
+        <ls>ZSOFIA</ls>
+        <ls></ls>
         <ls>test</ls>
         <ls>test</ls>
         <ls>test</ls>
