--- a/gittestdir/index.html
+++ b/gittestdir/index.html
@@ -12,27 +12,27 @@
     <h1>A mathiasz iskola 10 osztaly</h1>
     <hr>
     <ul>
-        <ls>BALOGH LANA</ls>
-        <ls>ZSOMBOR</ls>
-        <ls>ALIMOV SZABOLCS</ls>
-        <ls>csuhan lukacs balazs</ls>
-        <ls>LACI</ls>
-        <ls>LORAND</ls>
-        <ls>ZSOFIA</ls>
-        <ls></ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
-        <ls>test</ls>
+        <li>BALOGH LANA</li>
+        <li>ZSOMBOR</li>
+        <li>ALIMOV SZABOLCS</li>
+        <li>csuhan lukacs balazs</li>
+        <li>LACI</li>
+        <li>LORAND</li>
+        <li>ZSOFIA</li>
+        <li></li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
     </ul>
 </body>
 </html>
