--- a/gittestdir/index.html
+++ b/gittestdir/index.html
@@ -19,13 +19,13 @@
         <li>LACI</li>
         <li>LORAND</li>
         <li>ZSOFIA</li>
+        <li>HEGEDUS ERIK</li>
+        <li>ERIK</li>
+        <li>MARK</li>
+        <li>BENCE</li>
+        <li>SARA</li>
+        <li>birborka</li>
         <li></li>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
         <li>test</li>
         <li>test</li>
         <li>test</li>
